config/ingress/backend_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.iactorling.pl
      secretName: api-tls
  rules:
    - host: api.iactorling.pl
      http:
        paths:
          - backend:
              serviceName: backend
              servicePort: 80
