config/ingress/main_ingrees.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - iactorling.pl
      secretName: api-tls
  rules:
    - host: iactorling.pl
      http:
        paths:
          - backend:
              serviceName: php
              servicePort: 80
